--- a/content/collections/index.html
+++ b/content/collections/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2022-10-13 20:39 -->
+<!-- 2022-10-14 03:02 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>收藏夹</title>
@@ -36,46 +36,46 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org7317076">1. 妙妙文章</a>
+<li><a href="#orge256f15">1. 妙妙文章</a>
 <ul>
-<li><a href="#org647fc32">1.1. 关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></li>
-<li><a href="#org3dbc562">1.2. 关于编码 &#x2014; UTF-8 遍地开花</a></li>
-<li><a href="#org1274685">1.3. 关于编辑器</a></li>
-<li><a href="#org05e3500">1.4. 关于代码</a>
+<li><a href="#orgcaeaeca">1.1. 关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></li>
+<li><a href="#org9255eb0">1.2. 关于编码 &#x2014; UTF-8 遍地开花</a></li>
+<li><a href="#orgbc20623">1.3. 关于编辑器</a></li>
+<li><a href="#orgd48037b">1.4. 关于代码</a>
 <ul>
-<li><a href="#orge23310b">1.4.1. Lisp</a></li>
+<li><a href="#org7736e23">1.4.1. Lisp</a></li>
 </ul>
 </li>
-<li><a href="#orgf39a8a2">1.5. 关于CPU</a></li>
-<li><a href="#orgda8335d">1.6. 关于算法</a>
+<li><a href="#org169a5b1">1.5. 关于CPU</a></li>
+<li><a href="#orgcd6f24b">1.6. 关于算法</a>
 <ul>
-<li><a href="#org95450de">1.6.1. 关于随机</a></li>
+<li><a href="#org024e615">1.6.1. 关于随机</a></li>
 </ul>
 </li>
-<li><a href="#org2531c74">1.7. 关于AI</a></li>
-<li><a href="#org9d6559d">1.8. 关于软件</a>
+<li><a href="#org068aaf8">1.7. 关于AI</a></li>
+<li><a href="#orgc04448c">1.8. 关于软件</a>
 <ul>
-<li><a href="#org896bcd8">1.8.1. SQLite</a></li>
+<li><a href="#org360f3b2">1.8.1. SQLite</a></li>
 </ul>
 </li>
-<li><a href="#orgeebaaaf">1.9. 关于workflow</a></li>
+<li><a href="#org4c0e7b0">1.9. 关于workflow</a></li>
 </ul>
 </li>
-<li><a href="#org804dae5">2. 棒棒视频</a>
+<li><a href="#orgbfe4bf0">2. 棒棒视频</a>
 <ul>
-<li><a href="#orgc4c52c9">2.1. Veritasium 真理元素</a></li>
-<li><a href="#orgad1bb1e">2.2. 各种剧</a></li>
-<li><a href="#org78a3fde">2.3. 电影</a></li>
+<li><a href="#org9a71e2e">2.1. Veritasium 真理元素</a></li>
+<li><a href="#org07d10fe">2.2. 各种剧</a></li>
+<li><a href="#org2bf330d">2.3. 电影</a></li>
 </ul>
 </li>
-<li><a href="#org63e4d81">3. 快乐游戏</a></li>
-<li><a href="#org7118c99">4. 宝藏博主</a></li>
-<li><a href="#orgdb09ee0">5. 有意思的</a>
+<li><a href="#org8577f7a">3. 快乐游戏</a></li>
+<li><a href="#org2079327">4. 宝藏博主</a></li>
+<li><a href="#orgdc34b37">5. 有意思的</a>
 <ul>
-<li><a href="#orge77b1a7">5.1. 关于网页 &#x2014; HTML &amp; CSS</a></li>
+<li><a href="#orgc45adc6">5.1. 关于网页 &#x2014; HTML &amp; CSS</a></li>
 </ul>
 </li>
-<li><a href="#org57b870d">6. 我想玩的</a></li>
+<li><a href="#org0756398">6. 我想玩的</a></li>
 </ul>
 </div>
 </nav>
@@ -84,8 +84,8 @@
 这里大概会放一些我喜欢的东西🥰
 </p>
 
-<div id="outline-container-org7317076" class="outline-2">
-<h2 id="org7317076"><span class="section-number-2">1.</span> <a href="#org7317076">妙妙文章</a></h2>
+<div id="outline-container-orge256f15" class="outline-2">
+<h2 id="orge256f15"><span class="section-number-2">1.</span> <a href="#orge256f15">妙妙文章</a></h2>
 <div class="outline-text-2" id="text-1">
 <ul class="org-ul">
 <li><a href="https://idealclover.top/archives/627/">2020 年年终总结：致即将 22 岁的自己 &#x2014; 翠翠</a> 你工人爷爷的年终总结</li>
@@ -443,7 +443,7 @@ cards until the game is over.
 有好看的鸟鸟~
 </p>
 
-<figure id="org6794553">
+<figure id="org78ce0d5">
 <img src="./index/raku-inoue-plant-arrangements-19.jpg" alt="raku-inoue-plant-arrangements-19.jpg" width="60%" style="margin-left: auto; margin-right: auto;">
 
 </figure></li>
@@ -506,8 +506,8 @@ Take Umbrage.  Violators Will &#x2026;
 </ul>
 </div>
 
-<div id="outline-container-org647fc32" class="outline-3">
-<h3 id="org647fc32"><span class="section-number-3">1.1.</span> <a href="#org647fc32">关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></h3>
+<div id="outline-container-orgcaeaeca" class="outline-3">
+<h3 id="orgcaeaeca"><span class="section-number-3">1.1.</span> <a href="#orgcaeaeca">关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></h3>
 <div class="outline-text-3" id="text-1-1">
 <ul class="org-ul">
 <li><p>
@@ -537,8 +537,8 @@ have to kill yourself to be good at something.
 </div>
 </div>
 
-<div id="outline-container-org3dbc562" class="outline-3">
-<h3 id="org3dbc562"><span class="section-number-3">1.2.</span> <a href="#org3dbc562">关于编码 &#x2014; UTF-8 遍地开花</a></h3>
+<div id="outline-container-org9255eb0" class="outline-3">
+<h3 id="org9255eb0"><span class="section-number-3">1.2.</span> <a href="#org9255eb0">关于编码 &#x2014; UTF-8 遍地开花</a></h3>
 <div class="outline-text-3" id="text-1-2">
 <ul class="org-ul">
 <li><a href="http://www.hanselman.com/blog/why-the-askobama-tweet-was-garbled-on-screen-know-your-utf8-unicode-ascii-and-ansi-decoding-mr-president">Why the #AskObama Tweet was Garbled on Screen: Know your UTF-8,
@@ -572,8 +572,8 @@ This is not thebesttv.
 </div>
 </div>
 
-<div id="outline-container-org1274685" class="outline-3">
-<h3 id="org1274685"><span class="section-number-3">1.3.</span> <a href="#org1274685">关于编辑器</a></h3>
+<div id="outline-container-orgbc20623" class="outline-3">
+<h3 id="orgbc20623"><span class="section-number-3">1.3.</span> <a href="#orgbc20623">关于编辑器</a></h3>
 <div class="outline-text-3" id="text-1-3">
 <ul class="org-ul">
 <li><p>
@@ -589,8 +589,8 @@ lsp and tree-sitter changed the entire ecosystem of editors.
 </div>
 </div>
 
-<div id="outline-container-org05e3500" class="outline-3">
-<h3 id="org05e3500"><span class="section-number-3">1.4.</span> <a href="#org05e3500">关于代码</a></h3>
+<div id="outline-container-orgd48037b" class="outline-3">
+<h3 id="orgd48037b"><span class="section-number-3">1.4.</span> <a href="#orgd48037b">关于代码</a></h3>
 <div class="outline-text-3" id="text-1-4">
 <ul class="org-ul">
 <li><a href="https://gigamonkeys.com/code-reading/">Code is not literature &#x2014; Peter Seibel</a> Don&rsquo;t read code like it&rsquo;s a
@@ -615,8 +615,8 @@ future.</li>
 </ul>
 </div>
 
-<div id="outline-container-orge23310b" class="outline-4">
-<h4 id="orge23310b"><span class="section-number-4">1.4.1.</span> <a href="#orge23310b">Lisp</a></h4>
+<div id="outline-container-org7736e23" class="outline-4">
+<h4 id="org7736e23"><span class="section-number-4">1.4.1.</span> <a href="#org7736e23">Lisp</a></h4>
 <div class="outline-text-4" id="text-1-4-1">
 <ul class="org-ul">
 <li><a href="http://winestockwebdesign.com/Essays/Lisp_Curse.html">The Lisp Curse &#x2014; Rudolf Winestock</a>
@@ -639,8 +639,8 @@ inspired to create their own game.
 </div>
 </div>
 
-<div id="outline-container-orgf39a8a2" class="outline-3">
-<h3 id="orgf39a8a2"><span class="section-number-3">1.5.</span> <a href="#orgf39a8a2">关于CPU</a></h3>
+<div id="outline-container-org169a5b1" class="outline-3">
+<h3 id="org169a5b1"><span class="section-number-3">1.5.</span> <a href="#org169a5b1">关于CPU</a></h3>
 <div class="outline-text-3" id="text-1-5">
 <ul class="org-ul">
 <li><p>
@@ -655,8 +655,8 @@ Intel并不是在挤牙膏，而是一直在努力探索。只有当你成为Int
 </div>
 </div>
 
-<div id="outline-container-orgda8335d" class="outline-3">
-<h3 id="orgda8335d"><span class="section-number-3">1.6.</span> <a href="#orgda8335d">关于算法</a></h3>
+<div id="outline-container-orgcd6f24b" class="outline-3">
+<h3 id="orgcd6f24b"><span class="section-number-3">1.6.</span> <a href="#orgcd6f24b">关于算法</a></h3>
 <div class="outline-text-3" id="text-1-6">
 <ul class="org-ul">
 <li><a href="https://yonatankra.com/how-to-find-a-unique-number-in-a-list-of-pairs/">How to find a unique number in a list containing <b>pairs</b>?</a> 注意这里其他的数都是成对出现的, 那直接对整个list异或就行啦~ 如果其他数的出现次数不是偶数, 也可以用hash.</li>
@@ -675,8 +675,8 @@ OSTEP 里看到的, 之前一直用的除法, 没想到还要酱写.</li>
 </ul>
 </div>
 
-<div id="outline-container-org95450de" class="outline-4">
-<h4 id="org95450de"><span class="section-number-4">1.6.1.</span> <a href="#org95450de">关于随机</a></h4>
+<div id="outline-container-org024e615" class="outline-4">
+<h4 id="org024e615"><span class="section-number-4">1.6.1.</span> <a href="#org024e615">关于随机</a></h4>
 <div class="outline-text-4" id="text-1-6-1">
 <p>
 Cloudflare 的<a href="https://blog.cloudflare.com/">博客</a>有不少关于熵和随机的帖子
@@ -690,8 +690,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-org2531c74" class="outline-3">
-<h3 id="org2531c74"><span class="section-number-3">1.7.</span> <a href="#org2531c74">关于AI</a></h3>
+<div id="outline-container-org068aaf8" class="outline-3">
+<h3 id="org068aaf8"><span class="section-number-3">1.7.</span> <a href="#org068aaf8">关于AI</a></h3>
 <div class="outline-text-3" id="text-1-7">
 <ul class="org-ul">
 <li><a href="https://simonwillison.net/2022/Jul/9/gpt-3-explain-code/">Using GPT-3 to explain how code works</a> 没想到GPT-3这么厉害?</li>
@@ -701,8 +701,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-org9d6559d" class="outline-3">
-<h3 id="org9d6559d"><span class="section-number-3">1.8.</span> <a href="#org9d6559d">关于软件</a></h3>
+<div id="outline-container-orgc04448c" class="outline-3">
+<h3 id="orgc04448c"><span class="section-number-3">1.8.</span> <a href="#orgc04448c">关于软件</a></h3>
 <div class="outline-text-3" id="text-1-8">
 <p>
 大概未经测试的软件总是脆弱的😮‍💨
@@ -713,8 +713,8 @@ Linux 的熵池</li>
 </ul>
 </div>
 
-<div id="outline-container-org896bcd8" class="outline-4">
-<h4 id="org896bcd8"><span class="section-number-4">1.8.1.</span> <a href="#org896bcd8">SQLite</a></h4>
+<div id="outline-container-org360f3b2" class="outline-4">
+<h4 id="org360f3b2"><span class="section-number-4">1.8.1.</span> <a href="#org360f3b2">SQLite</a></h4>
 <div class="outline-text-4" id="text-1-8-1">
 <p>
 作为一个无处不在, 且运行于几乎所有架构与系统的数据库, SQLite 的测试代码量可谓恐怖&#x2014;测试代码行数是 SQLite 库的 608 倍, 几乎十亿行🤯
@@ -728,8 +728,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-orgeebaaaf" class="outline-3">
-<h3 id="orgeebaaaf"><span class="section-number-3">1.9.</span> <a href="#orgeebaaaf">关于workflow</a></h3>
+<div id="outline-container-org4c0e7b0" class="outline-3">
+<h3 id="org4c0e7b0"><span class="section-number-3">1.9.</span> <a href="#org4c0e7b0">关于workflow</a></h3>
 <div class="outline-text-3" id="text-1-9">
 <ul class="org-ul">
 <li><a href="https://castel.dev/post/research-workflow/">My Mathematics PhD research workflow</a> 一个数学PhD的workflow, 包括LaTeX笔记
@@ -739,8 +739,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-org804dae5" class="outline-2">
-<h2 id="org804dae5"><span class="section-number-2">2.</span> <a href="#org804dae5">棒棒视频</a></h2>
+<div id="outline-container-orgbfe4bf0" class="outline-2">
+<h2 id="orgbfe4bf0"><span class="section-number-2">2.</span> <a href="#orgbfe4bf0">棒棒视频</a></h2>
 <div class="outline-text-2" id="text-2">
 <ul class="org-ul">
 <li><p>
@@ -795,8 +795,8 @@ Practical, but also works on the human level in this case.
 </ul>
 </div>
 
-<div id="outline-container-orgc4c52c9" class="outline-3">
-<h3 id="orgc4c52c9"><span class="section-number-3">2.1.</span> <a href="#orgc4c52c9">Veritasium 真理元素</a></h3>
+<div id="outline-container-org9a71e2e" class="outline-3">
+<h3 id="org9a71e2e"><span class="section-number-3">2.1.</span> <a href="#org9a71e2e">Veritasium 真理元素</a></h3>
 <div class="outline-text-3" id="text-2-1">
 <ul class="org-ul">
 <li><a href="https://youtu.be/IgF3OX8nT0w">The Most Powerful Computers You&rsquo;ve Never Heard Of</a>
@@ -821,8 +821,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-orgad1bb1e" class="outline-3">
-<h3 id="orgad1bb1e"><span class="section-number-3">2.2.</span> <a href="#orgad1bb1e">各种剧</a></h3>
+<div id="outline-container-org07d10fe" class="outline-3">
+<h3 id="org07d10fe"><span class="section-number-3">2.2.</span> <a href="#org07d10fe">各种剧</a></h3>
 <div class="outline-text-3" id="text-2-2">
 <ul class="org-ul">
 <li>摩登家庭</li>
@@ -845,8 +845,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org78a3fde" class="outline-3">
-<h3 id="org78a3fde"><span class="section-number-3">2.3.</span> <a href="#org78a3fde">电影</a></h3>
+<div id="outline-container-org2bf330d" class="outline-3">
+<h3 id="org2bf330d"><span class="section-number-3">2.3.</span> <a href="#org2bf330d">电影</a></h3>
 <div class="outline-text-3" id="text-2-3">
 <ul class="org-ul">
 <li><a href="https://movie.douban.com/subject/2131459/">机器人总动员</a></li>
@@ -872,8 +872,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org63e4d81" class="outline-2">
-<h2 id="org63e4d81"><span class="section-number-2">3.</span> <a href="#org63e4d81">快乐游戏</a></h2>
+<div id="outline-container-org8577f7a" class="outline-2">
+<h2 id="org8577f7a"><span class="section-number-2">3.</span> <a href="#org8577f7a">快乐游戏</a></h2>
 <div class="outline-text-2" id="text-3">
 <blockquote>
 <p>
@@ -902,8 +902,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org7118c99" class="outline-2">
-<h2 id="org7118c99"><span class="section-number-2">4.</span> <a href="#org7118c99">宝藏博主</a></h2>
+<div id="outline-container-org2079327" class="outline-2">
+<h2 id="org2079327"><span class="section-number-2">4.</span> <a href="#org2079327">宝藏博主</a></h2>
 <div class="outline-text-2" id="text-4">
 <ul class="org-ul">
 <li><a href="https://idealclover.top/">翠翠 / Idealclover</a></li>
@@ -914,7 +914,7 @@ and exist, before it is generally received and practiced on.
 <a href="https://collet66.web.fc2.com/">Syosa&rsquo;s Room</a> 画了很多像素花, 鸟, 狗
 </p>
 
-<figure id="org7081b7a">
+<figure id="orgd8cef10">
 <img src="./index/pixel-birds.png" alt="pixel-birds.png" width="80%" style="margin-left: auto; margin-right: auto;">
 
 </figure></li>
@@ -922,8 +922,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-orgdb09ee0" class="outline-2">
-<h2 id="orgdb09ee0"><span class="section-number-2">5.</span> <a href="#orgdb09ee0">有意思的</a></h2>
+<div id="outline-container-orgdc34b37" class="outline-2">
+<h2 id="orgdc34b37"><span class="section-number-2">5.</span> <a href="#orgdc34b37">有意思的</a></h2>
 <div class="outline-text-2" id="text-5">
 <ul class="org-ul">
 <li><p>
@@ -955,8 +955,8 @@ Always check your friendship before terminating it.  hhhh</li>
 </ul>
 </div>
 
-<div id="outline-container-orge77b1a7" class="outline-3">
-<h3 id="orge77b1a7"><span class="section-number-3">5.1.</span> <a href="#orge77b1a7">关于网页 &#x2014; HTML &amp; CSS</a></h3>
+<div id="outline-container-orgc45adc6" class="outline-3">
+<h3 id="orgc45adc6"><span class="section-number-3">5.1.</span> <a href="#orgc45adc6">关于网页 &#x2014; HTML &amp; CSS</a></h3>
 <div class="outline-text-3" id="text-5-1">
 <ul class="org-ul">
 <li><a href="https://pinecast.com/feed/emacscast">这个网站</a>是 XML 格式的 RSS feed，不过仿佛加了一层 stylesheet 啥的🤔，
@@ -968,8 +968,8 @@ Always check your friendship before terminating it.  hhhh</li>
 </div>
 </div>
 
-<div id="outline-container-org57b870d" class="outline-2">
-<h2 id="org57b870d"><span class="section-number-2">6.</span> <a href="#org57b870d">我想玩的</a></h2>
+<div id="outline-container-org0756398" class="outline-2">
+<h2 id="org0756398"><span class="section-number-2">6.</span> <a href="#org0756398">我想玩的</a></h2>
 <div class="outline-text-2" id="text-6">
 <p>
 大概是我想玩的各种游戏, 但因为事情好多好多, 而且只有一个集显笔记本,
@@ -992,7 +992,7 @@ Always check your friendship before terminating it.  hhhh</li>
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2021-05-19 08:10</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-10-13 20:37</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-13 20:39</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-14 03:02</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/collections/index.org">content/collections/index.org</a></td></tr>
 </table>
