--- a/content/daily/2022-09-28.html
+++ b/content/daily/2022-09-28.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2022-10-13 20:39 -->
+<!-- 2022-10-14 03:02 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>保研回忆录</title>
@@ -36,19 +36,19 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org1a550a7">1. 暑假</a>
+<li><a href="#orge37cd19">1. 暑假</a>
 <ul>
-<li><a href="#org0942d16">1.1. 夏令营</a></li>
+<li><a href="#orgbf6e63c">1.1. 夏令营</a></li>
 </ul>
 </li>
-<li><a href="#orgf82572d">2. 打工</a></li>
-<li><a href="#orge8dfd31">3. 我的928</a>
+<li><a href="#orga2475ef">2. 打工</a></li>
+<li><a href="#org60a5bd9">3. 我的928</a>
 <ul>
-<li><a href="#orgd0df290">3.1. 928演唱会(bushi</a></li>
+<li><a href="#org1f8cf90">3.1. 928演唱会(bushi</a></li>
 </ul>
 </li>
-<li><a href="#org811d582">4. 他们的928</a></li>
-<li><a href="#org9b2aa26">5. 总结</a></li>
+<li><a href="#org77abb99">4. 他们的928</a></li>
+<li><a href="#orga9014e9">5. 总结</a></li>
 </ul>
 </div>
 </nav>
@@ -58,7 +58,7 @@
 </p>
 
 
-<figure id="org1a05bba">
+<figure id="org44d6132">
 <img src="2022-09-28/928-nju.jpg" alt="928-nju.jpg" width="80%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">Figure 1: </span>南大offer</figcaption>
@@ -81,8 +81,8 @@
 <li><a href="http://www.cskaoyan.com/thread-237791-1-1.html">中科院计算所实验室情况简要介绍</a></li>
 </ul>
 
-<div id="outline-container-org1a550a7" class="outline-2">
-<h2 id="org1a550a7"><span class="section-number-2">1.</span> <a href="#org1a550a7">暑假</a></h2>
+<div id="outline-container-orge37cd19" class="outline-2">
+<h2 id="orge37cd19"><span class="section-number-2">1.</span> <a href="#orge37cd19">暑假</a></h2>
 <div class="outline-text-2" id="text-1">
 <p>
 夏令营之前我是很想去计算所学体系结构的,
@@ -106,8 +106,8 @@
 </p>
 </div>
 
-<div id="outline-container-org0942d16" class="outline-3">
-<h3 id="org0942d16"><span class="section-number-3">1.1.</span> <a href="#org0942d16">夏令营</a></h3>
+<div id="outline-container-orgbf6e63c" class="outline-3">
+<h3 id="orgbf6e63c"><span class="section-number-3">1.1.</span> <a href="#orgbf6e63c">夏令营</a></h3>
 <div class="outline-text-3" id="text-1-1">
 <p>
 被直接拒的学校
@@ -149,8 +149,8 @@
 </div>
 </div>
 
-<div id="outline-container-orgf82572d" class="outline-2">
-<h2 id="orgf82572d"><span class="section-number-2">2.</span> <a href="#orgf82572d">打工</a></h2>
+<div id="outline-container-orga2475ef" class="outline-2">
+<h2 id="orga2475ef"><span class="section-number-2">2.</span> <a href="#orga2475ef">打工</a></h2>
 <div class="outline-text-2" id="text-2">
 <p>
 跟了wy之后就开始学静态分析了, 还是继续看三下没看完的南大程序分析课,
@@ -164,8 +164,8 @@ p.s. IDEA 写 Java 是真的方便
 </div>
 </div>
 
-<div id="outline-container-orge8dfd31" class="outline-2">
-<h2 id="orge8dfd31"><span class="section-number-2">3.</span> <a href="#orge8dfd31">我的928</a></h2>
+<div id="outline-container-org60a5bd9" class="outline-2">
+<h2 id="org60a5bd9"><span class="section-number-2">3.</span> <a href="#org60a5bd9">我的928</a></h2>
 <div class="outline-text-2" id="text-3">
 <p>
 928还算平静, 照着群里的通知一步步做就行了.
@@ -181,8 +181,8 @@ p.s. IDEA 写 Java 是真的方便
 </p>
 </div>
 
-<div id="outline-container-orgd0df290" class="outline-3">
-<h3 id="orgd0df290"><span class="section-number-3">3.1.</span> <a href="#orgd0df290">928演唱会(bushi</a></h3>
+<div id="outline-container-org1f8cf90" class="outline-3">
+<h3 id="org1f8cf90"><span class="section-number-3">3.1.</span> <a href="#org1f8cf90">928演唱会(bushi</a></h3>
 <div class="outline-text-3" id="text-3-1">
 <p>
 演唱会是在二运开的, 和jdh一起去听着玩, 一开始因为没有门票被挡在外面,
@@ -190,7 +190,7 @@ p.s. IDEA 写 Java 是真的方便
 </p>
 
 
-<figure id="org9f4be58">
+<figure id="org9efc764">
 <img src="2022-09-28/outside.jpg" alt="outside.jpg" width="60%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">Figure 2: </span>被挡在外面</figcaption>
@@ -202,7 +202,7 @@ p.s. IDEA 写 Java 是真的方便
 </p>
 
 
-<figure id="orgd1cd4ab">
+<figure id="org7442ed9">
 <img src="2022-09-28/auditorium.jpg" alt="auditorium.jpg" width="80%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">Figure 3: </span>在观众席上</figcaption>
@@ -215,8 +215,8 @@ p.s. IDEA 写 Java 是真的方便
 </div>
 </div>
 
-<div id="outline-container-org811d582" class="outline-2">
-<h2 id="org811d582"><span class="section-number-2">4.</span> <a href="#org811d582">他们的928</a></h2>
+<div id="outline-container-org77abb99" class="outline-2">
+<h2 id="org77abb99"><span class="section-number-2">4.</span> <a href="#org77abb99">他们的928</a></h2>
 <div class="outline-text-2" id="text-4">
 <ul class="org-ul">
 <li>翔去了复旦NLP</li>
@@ -236,8 +236,8 @@ p.s. IDEA 写 Java 是真的方便
 </div>
 </div>
 
-<div id="outline-container-org9b2aa26" class="outline-2">
-<h2 id="org9b2aa26"><span class="section-number-2">5.</span> <a href="#org9b2aa26">总结</a></h2>
+<div id="outline-container-orga9014e9" class="outline-2">
+<h2 id="orga9014e9"><span class="section-number-2">5.</span> <a href="#orga9014e9">总结</a></h2>
 <div class="outline-text-2" id="text-5">
 <p>
 保研最难的两关都过了, 也貌似遇到了不错的导师.
@@ -252,7 +252,7 @@ p.s. IDEA 写 Java 是真的方便
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2022-09-28 16:27</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-09-29 10:48</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-13 20:39</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-14 03:02</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/daily/2022-09-28.org">content/daily/2022-09-28.org</a></td></tr>
 </table>
